--- a/content/data/locales/translations/translations.en.yaml
+++ b/content/data/locales/translations/translations.en.yaml
@@ -143,7 +143,7 @@
 - key: footer.inquiry.button_title
   value: НАДІСЛАТИ ЗАПИТ
 - key: footer.privacyPolicy
-  value: Конфіденційність
+  value: Privacy Policy
 - key: contacts.title
   value: Контакти
 - key: contacts.wait_you_on_address
