--- a/src/pages/en/404.md
+++ b/src/pages/en/404.md
@@ -1,6 +1,7 @@
 ---
 title: "404"
 metaDescription: Page not found
+layout: '@/layouts/404.astro'
 ---
 We're sorry, the page you requested was not found.  
   
