--- a/src/pages/tr/404.md
+++ b/src/pages/tr/404.md
@@ -1,6 +1,7 @@
 ---
 title: "404"
 metaDescription: Sayfa bulunamadı
+layout: '@/layouts/404.astro'
 ---
 Üzgünüz, istediğiniz sayfa bulunamadı.  
   
