--- a/src/pages/tr/404.md
+++ b/src/pages/tr/404.md
@@ -1,9 +1,9 @@
 ---
-title: "404"
+title: '404'
 metaDescription: Sayfa bulunamadı
 layout: '@/layouts/404.astro'
 ---
-Üzgünüz, istediğiniz sayfa bulunamadı.  
-  
-  
+
+Üzgünüz, istediğiniz sayfa bulunamadı.
+
 [Eve geri dön](/tr/)
