--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -1,9 +1,9 @@
 ---
-title: "404"
+title: '404'
 metaDescription: Страница не найдена
 layout: '@/layouts/404.astro'
 ---
-Сожалеем, запрашиваемая вами страница не найдена.  
-  
-  
+
+Сожалеем, запрашиваемая вами страница не найдена.
+
 [Вернуться на Главную](/)
